# software-design-1

./: .travis.yml  ArgParse.md  README.md  cli.cabal
app/: CLI.hs
src/System/CLI/: Command.hs  Environment.hs  Parser.hs  Preprocessor.hs  Runner.hs
src/System/CLI/Command/Internal/: Executor.hs  ExternalCommand.hs  Grep.hs  Pipeline.hs  Types.hs  Wc.hs
src/System/CLI/Environment/Internal/: EnvOperations.hs  StreamOperations.hs  Types.hs
test/: CommandTest.hs  ParserTest.hs  PreprocessorTest.hs
test/data/: LICENSE
